# CppTemplate

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yaml  ci.yaml  format.yaml
Applications/: Application.cpp  CMakeLists.txt
CMake/: Application.cmake  CompileOptions.cmake  ExportMacro.cmake  Library.cmake  Package.cmake  PackageConfig.cmake.in  PackageOptions.cmake
Source/: CMakeLists.txt
Source/CppTemplate/Lib1/: Lib1.cpp  Lib1.hpp
Source/CppTemplate/Lib2/: CMakeLists.txt  Lib2.cpp  Lib2.hpp
Source/Template/: CMakeLists.txt
Source/Template/Lib1/: CMakeLists.txt  Lib1.cpp  Lib1.h  Lib1.hpp
Source/Template/Lib2/: CMakeLists.txt  Lib2.cpp  Lib2.h  Lib2.hpp
Tests/: CMakeLists.txt  Test1.cpp  Test2.cpp
Tests/Lib1/: Test1.cpp
Tests/Lib2/: Test2.cpp
